--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-﻿<!Doctype Html>
+<!Doctype Html>
 <html lang="es">
 	<head>
 		<meta charset='utf-8'>
-		<title>Ovi</title>
+		
+		<!--Aporte John Fredy conten -->
+		<meta content="Grupo 35" name="author"/>
+		<meta content="Pagina de inicio de Seguridad Informática, con enfoque educativo." name="description">
+		<meta content="informatica, Seguridad, educacion, computación, sistemas" name="keywords">
+
+		<title>Ovi Grupo 34</title>
         <link rel="shortcut icon" href="img/logounad.jpg" />
 	</head>
-	<body>
+	<body><center>
 		<div id="contenedor">
 			<header>
 				<hgroup>
