--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             	<li><a href="index.html">Inicio</a></li>
                 <li><a href="conceseguinf.html">Conceptos</a></li>
                 <li><a href="estandseguinf.html">Estándares</a></li>
-                <li><a href="controlseguinf.html">Cobit</a></li>
-                <li><a href="controlesseguinf.html">Control</a></li>
-                <li><a href="autorescursoseginf.html">Autores</a></li>
+                <li><a href="cobiseguinf.html">Cobit</a></li>
+                <li><a href="controlseguinf.html">Control</a></li>
+                <li><a href="autorescursoseguinf.html">Autores</a></li>
             </ul>
             </nav>
 	   
@@ -79,36 +79,4 @@
 	</div>
     </div>
 </body>
-</html>
-=======
-<!Doctype Html>
-<html lang="es">
-	<head>
-		<meta charset='utf-8'>
-		
-		<!--Aporte John Fredy conten -->
-		<meta content="Grupo 35" name="author"/>
-		<meta content="Pagina de inicio de Seguridad Informática, con enfoque educativo." name="description">
-		<meta content="informatica, Seguridad, educacion, computación, sistemas" name="keywords">
-
-		<title>Ovi Grupo 34</title>
-        <link rel="shortcut icon" href="img/logounad.jpg" />
-	</head>
-	<body><center>
-		<div id="contenedor">
-			<header>
-				<hgroup>
-					<h1>Seguridad Informática</h1>
-				</hgroup>
-			</header>
-			<nav>
-				<ul>
-					<li>1</li>
-					<li>2</li>
-					<li></li>
-					<li></li>
-				</ul>
-			</nav>
-		</div>
-	</body>
 </html>
