--- a/conceseguinf.html
+++ b/conceseguinf.html
@@ -169,6 +169,8 @@
             </ul>
 
             <p>Con estos conceptos, damos por finalizada la primera parte del presente curso de seguridad informática.  En la siguiente sección, estaremos tratando qué es un estándar de seguridad informática y cuáles son los principales modelos que existen.</p>
+            <p>Para verificar el aprendizaje de esta sesión, lo invitamos a dar clic en la siguiente imagen y realizar la actividad:</p>
+            <p align="center"><a href="http://clic.xtec.cat/db/jclicApplet.jsp?project=https://dl.dropbox.com/s/waz4i1enoxxiszx/ovi.jclic.zip"><img id="imagenes" src="img/learn.jpeg"></a></p>
         </article>
         </section>
         <section id="presentacion2"><p>&nbsp;</p></section>
