--- a/controlseguinf.html
+++ b/controlseguinf.html
@@ -64,6 +64,8 @@
             <li>Cuidado con la ingeniería social: a través de las redes sociales los ciberdelincuentes pueden intentar obtener datos e información que pueden utilizar para realizar ataques.</li>
             <li>Criptografía, especialmente la encriptación: juega un papel importante en mantener nuestra información sensible, segura y secreta.</li>
             </ul>
+            <p>Para verificar el aprendizaje de esta sesión, lo invitamos a dar clic en la siguiente imagen y realizar la actividad:</p>
+            <p align="center"><a href="http://clic.xtec.cat/db/jclicApplet.jsp?project=https://dl.dropbox.com/s/ee2dswkspv95oxe/control.scorm.zip"><img id="imagenes" src="img/learn.jpeg"></a></p>
         </article>
         </section>
         <section id="presentacion2"><p>&nbsp;</p></section>
