--- a/controlseguinf.html
+++ b/controlseguinf.html
@@ -26,6 +26,7 @@
                 <li><a href="estandseguinf.html">Estándares</a></li>
                 <li><a href="cobiseguinf.html">Cobit</a></li>
                 <li><a href="controlseguinf.html">Control</a></li>
+                <li><a href="activseguinf.html">Actividades</a></li>
                 <li><a href="autorescursoseguinf.html">Autores</a></li>
             </ul>
             </nav>
@@ -64,8 +65,14 @@
             <li>Cuidado con la ingeniería social: a través de las redes sociales los ciberdelincuentes pueden intentar obtener datos e información que pueden utilizar para realizar ataques.</li>
             <li>Criptografía, especialmente la encriptación: juega un papel importante en mantener nuestra información sensible, segura y secreta.</li>
             </ul>
-            <p>Para verificar el aprendizaje de esta sesión, lo invitamos a dar clic en la siguiente imagen y realizar la actividad:</p>
-            <p align="center"><a href="http://clic.xtec.cat/db/jclicApplet.jsp?project=https://dl.dropbox.com/s/ee2dswkspv95oxe/control.scorm.zip"><img id="imagenes" src="img/learn.jpeg"></a></p>
+
+            <h3>Para verificar el aprendizaje de esta sesión, lo invitamos a dar clic en la siguiente imagen y realizar la actividad en una nueva pestaña:</h3>
+
+            <h4 align="center">Actividad 6</h4>
+            <p align="center"><a href="http://clic.xtec.cat/db/jclicApplet.jsp?project=https://dl.dropbox.com/s/ee2dswkspv95oxe/control.scorm.zip" target="blank"><img id="imagenes" src="img/learn.jpeg"></a></p>
+            
+            <h4 align="center">Actividad 7 (Test Final - Basado en todo el curso)</h4>
+            <p align="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSoDDY5ChJI570bdnR86OzmV371V4mVUQqt799ZBIBqJoHqw/viewform?usp=sf_link" target="blank"><img id="imagenes" src="img/learn2.jpeg"></a></p>
         </article>
         </section>
         <section id="presentacion2"><p>&nbsp;</p></section>
