--- a/estandseguinf.html
+++ b/estandseguinf.html
@@ -26,6 +26,7 @@
                 <li><a href="estandseguinf.html">Estándares</a></li>
                 <li><a href="cobiseguinf.html">Cobit</a></li>
                 <li><a href="controlseguinf.html">Control</a></li>
+                <li><a href="activseguinf.html">Actividades</a></li>
                 <li><a href="autorescursoseguinf.html">Autores</a></li>
             </ul>
             </nav>
@@ -170,8 +171,9 @@
 
             <p>BS7799-1:1999 Information Security Management. Code of Practice for Information Security Management. Es la guía de buenas prácticas, para la que no se establece un modelo de certificación. </p>
             <p>BS7799-2:1999 Information Security Management. Specification for Information Security Management Systems. Establece los requisitos de un sistema de seguridad de la información (SGSI) para ser certificable por una entidad independiente. </p>
-            <p>Para verificar el aprendizaje de esta sesión, lo invitamos a dar clic en la siguiente imagen y realizar la actividad:</p>
-            <p align="center"><a href="http://clic.xtec.cat/db/jclicApplet.jsp?project=https://dl.dropbox.com/s/t3pf6u8dcebxwu4/estandares.jclic.zip"><img id="imagenes" src="img/actividad2.jpeg"></a></p>
+            <h3>Para verificar el aprendizaje de esta sesión, lo invitamos a dar clic en la siguiente imagen y realizar la actividad en una nueva pestaña:</h3>
+            <h4 align="center">Actividad 3</h4>
+            <p align="center"><a href="http://clic.xtec.cat/db/jclicApplet.jsp?project=https://dl.dropbox.com/s/t3pf6u8dcebxwu4/estandares.jclic.zip" target="blank"><img id="imagenes" src="img/actividad2.jpeg"></a></p>
 
         </article>
         </section>
