--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="estandseguinf.html">Estándares</a></li>
                 <li><a href="cobiseguinf.html">Cobit</a></li>
                 <li><a href="controlseguinf.html">Control</a></li>
+                <li><a href="activseguinf.html">Actividades</a></li>
                 <li><a href="autorescursoseguinf.html">Autores</a></li>
             </ul>
             </nav>
@@ -36,6 +37,8 @@
             <iframe src="https://www.youtube.com/embed/KiuTyXehW-8?showinfo=0&rel=0" frameborder="0" allowfullscreen ></iframe>
             <br>Vídeo creado por: Colegio Secundario Don Bosco (2010-11-23).  Seguridad Informática.
             <p>&nbsp;</p>
+            <h2>Nuestras Redes Sociales</h2>
+            <p><a class="twitter-timeline" data-width="600" data-height="350" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
             
             <article class="articulos">
             <div id="seguridad"></div>
@@ -65,6 +68,15 @@
             <p>Los controles se clasifican en los siguientes: Preventivos, detectivos, correctivos. </p>
             <p><a href="controlseguinf.html">Abrir lección</a></p>
             </article>
+
+            <article class="articulos">
+            <div id="actividades"></div>
+            <h4>Actividades</h4>
+            <p>Encuentre aquí todas las actividades académicas e interactivas, propuestas para verificar la asimilación de los contenidos desarrollados en este curso.</p>
+            <p>Al final de cada sesión, se puede realizar su respectivo ejercicio.</p>
+            <p><a href="activseguinf.html">Abrir actividades</a></p>
+            </article>
+
         </section>
         <section id="presentacion2"><p>&nbsp;</p></section>
     <aside>
@@ -72,6 +84,7 @@
     </div>
    <footer>
             <h6>
+            Eres el visitante Número: <div id="sfcy9bjed3g9s5ue2gu9p89byc7f7ekgr1l"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=y9bjed3g9s5ue2gu9p89byc7f7ekgr1l&down=async" async></script><noscript><a href="#" title="contador de visitas gratis"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=y9bjed3g9s5ue2gu9p89byc7f7ekgr1l" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
             Diseñado Por: <a href="autorescursoseginf.html"><span>Grupo Colaborativo Ingeniería De Sistemas</span></a><br>
             Colombia. Todos los derechos reservados.<br>
             Máxima Compatibilidad con Chrome y Mozilla.</h6>
