--- a/cobiseguinf.html
+++ b/cobiseguinf.html
@@ -68,7 +68,7 @@
     </div>
    <footer>
             <h6>
-            Diseñado Por: <a href="autorescursoseginf.html"><span>Grupo Colaborativo Ingeniería De Sistemas</span></a><br>
+            Diseñado Por: <a href="autorescursoseguinf.html"><span>Grupo Colaborativo Ingeniería De Sistemas</span></a><br>
             Colombia.  Todos los derechos reservados.<br>
             Máxima Compatibilidad con Chrome y Mozilla.</h6>
     </footer>
