--- a/activseguinf.html
+++ b/activseguinf.html
@@ -51,7 +51,7 @@
             <p align="center">Sesión 3 (Cobit)</p>
 
             <p align="center"><a href="http://clic.xtec.cat/db/jclicApplet.jsp?project=https://dl.dropbox.com/s/png9xsrin4bqf6d/cobit.jclic.zip" target="blank">Actividad 4</a></p>
-            <p align="center"><a href="descargas/FormatoAnalisis.docx">Actividad 5:</a></p>
+            <p align="center"><a href="descargas/FormatoAnalisis.docx">Actividad 5</a></p>
             <p>Lo invitamos a descargar el formato y elaborar su propio análisis de riesgos e impactos basado en el punto vive digital más cercano a su lugar de residencia.</p>
             <p align="center"></p>
             <p>&nbsp;</p>
