--- a/cobiseguinf.html
+++ b/cobiseguinf.html
@@ -68,6 +68,7 @@
     </div>
    <footer>
             <h6>
+            Eres el visitante Número: <div id="sfcy9bjed3g9s5ue2gu9p89byc7f7ekgr1l"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=y9bjed3g9s5ue2gu9p89byc7f7ekgr1l&down=async" async title="contador"></script><noscript><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=y9bjed3g9s5ue2gu9p89byc7f7ekgr1l" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></noscript>
             Diseñado Por: <a href="autorescursoseguinf.html"><span>Grupo Colaborativo Ingeniería De Sistemas</span></a><br>
             Colombia.  Todos los derechos reservados.<br>
             Máxima Compatibilidad con Chrome y Mozilla.</h6>
