--- a/controlseguinf.html
+++ b/controlseguinf.html
@@ -32,6 +32,7 @@
             </nav>
 	   
         <section id="presentacion">
+            <a name="arriba"></a>
             <article>
             
             <h3>Cordial saludo, en la presente sección vamos a hablar sobre el control informático y sus diferentes formas en la empresa con el fin de mejorar la estrategia de seguridad informática.</h3>
@@ -74,6 +75,7 @@
             <h4 align="center">Actividad 7 (Test Final - Basado en todo el curso)</h4>
             <p align="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSoDDY5ChJI570bdnR86OzmV371V4mVUQqt799ZBIBqJoHqw/viewform?usp=sf_link" target="blank"><img id="imagenes" src="img/learn2.jpeg"></a></p>
         </article>
+        <a href="#arriba">Ir Arriba</a>
         </section>
         <section id="presentacion2"><p>&nbsp;</p></section>
     <aside>
